cmake_minimum_required(VERSION 3.13)
project(jq)

set(CMAKE_CXX_STANDARD 14)

include_directories(modules/oniguruma/src)
include_directories(modules/ion-c/ionc/inc)
include_directories(modules/ion-c/decNumber)
include_directories(src)

# TODO add ion-c sources
add_executable(jq
        modules/oniguruma/contributed/libfuzzer-onig.cpp
        modules/oniguruma/sample/bug_fix.c
        modules/oniguruma/sample/crnl.c
        modules/oniguruma/sample/encode.c
        modules/oniguruma/sample/listcap.c
        modules/oniguruma/sample/names.c
        modules/oniguruma/sample/posix.c
        modules/oniguruma/sample/scan.c
        modules/oniguruma/sample/simple.c
        modules/oniguruma/sample/sql.c
        modules/oniguruma/sample/syntax.c
        modules/oniguruma/sample/user_property.c
        modules/oniguruma/src/unicode-7.0/unicode_fold1_key.c
        modules/oniguruma/src/unicode-7.0/unicode_fold2_key.c
        modules/oniguruma/src/unicode-7.0/unicode_fold3_key.c
        modules/oniguruma/src/unicode-7.0/unicode_fold_data.c
        modules/oniguruma/src/unicode-7.0/unicode_property_data.c
        modules/oniguruma/src/unicode-7.0/unicode_property_data_posix.c
        modules/oniguruma/src/unicode-7.0/unicode_unfold_key.c
        modules/oniguruma/src/ascii.c
        modules/oniguruma/src/big5.c
        modules/oniguruma/src/config.h
        modules/oniguruma/src/cp1251.c
        modules/oniguruma/src/euc_jp.c
        modules/oniguruma/src/euc_jp_prop.c
        modules/oniguruma/src/euc_kr.c
        modules/oniguruma/src/euc_tw.c
        modules/oniguruma/src/gb18030.c
        modules/oniguruma/src/iso8859_1.c
        modules/oniguruma/src/iso8859_10.c
        modules/oniguruma/src/iso8859_11.c
        modules/oniguruma/src/iso8859_13.c
        modules/oniguruma/src/iso8859_14.c
        modules/oniguruma/src/iso8859_15.c
        modules/oniguruma/src/iso8859_16.c
        modules/oniguruma/src/iso8859_2.c
        modules/oniguruma/src/iso8859_3.c
        modules/oniguruma/src/iso8859_4.c
        modules/oniguruma/src/iso8859_5.c
        modules/oniguruma/src/iso8859_6.c
        modules/oniguruma/src/iso8859_7.c
        modules/oniguruma/src/iso8859_8.c
        modules/oniguruma/src/iso8859_9.c
        modules/oniguruma/src/koi8.c
        modules/oniguruma/src/koi8_r.c
        modules/oniguruma/src/mktable.c
        modules/oniguruma/src/onig_init.c
        modules/oniguruma/src/oniggnu.h
        modules/oniguruma/src/onigposix.h
        modules/oniguruma/src/oniguruma.h
        modules/oniguruma/src/regcomp.c
        modules/oniguruma/src/regenc.c
        modules/oniguruma/src/regenc.h
        modules/oniguruma/src/regerror.c
        modules/oniguruma/src/regexec.c
        modules/oniguruma/src/regext.c
        modules/oniguruma/src/reggnu.c
        modules/oniguruma/src/regint.h
        modules/oniguruma/src/regparse.c
        modules/oniguruma/src/regparse.h
        modules/oniguruma/src/regposerr.c
        modules/oniguruma/src/regposix.c
        modules/oniguruma/src/regsyntax.c
        modules/oniguruma/src/regtrav.c
        modules/oniguruma/src/regversion.c
        modules/oniguruma/src/sjis.c
        modules/oniguruma/src/sjis_prop.c
        modules/oniguruma/src/st.c
        modules/oniguruma/src/st.h
        modules/oniguruma/src/unicode.c
        modules/oniguruma/src/unicode_fold1_key.c
        modules/oniguruma/src/unicode_fold2_key.c
        modules/oniguruma/src/unicode_fold3_key.c
        modules/oniguruma/src/unicode_fold_data.c
        modules/oniguruma/src/unicode_property_data.c
        modules/oniguruma/src/unicode_property_data_posix.c
        modules/oniguruma/src/unicode_unfold_key.c
        modules/oniguruma/src/utf16_be.c
        modules/oniguruma/src/utf16_le.c
        modules/oniguruma/src/utf32_be.c
        modules/oniguruma/src/utf32_le.c
        modules/oniguruma/src/utf8.c
        modules/oniguruma/test/testc.c
        modules/oniguruma/test/testu.c
        modules/oniguruma/windows/testc.c
        src/builtin.c
        src/builtin.h
        src/bytecode.c
        src/bytecode.h
        src/compile.c
        src/compile.h
        src/exec_stack.h
        src/execute.c
        src/inject_errors.c
        src/jq.h
        src/jq_parser.h
        src/jq_test.c
        src/jv.c
        src/jv.h
        src/jv_alloc.c
        src/jv_alloc.h
        src/jv_aux.c
        src/jv_dtoa.c
        src/jv_dtoa.h
        src/jv_file.c
        src/jv_parse.c
        src/jv_parse_ion.c
        src/jv_print.c
        src/jv_unicode.c
        src/jv_unicode.h
        src/jv_utf8_tables.h
        src/lexer.c
        src/lexer.h
        src/libm.h
        src/linker.c
        src/linker.h
        src/locfile.c
        src/locfile.h
        src/main.c
        src/opcode_list.h
        src/parser.c
        src/parser.h
        src/util.c
        src/util.h
        src/version.h)
